fix overflow for carousel

--- a/src/features/ProductImagesLayout/ImagesCarousel/ImagesCarousel.scss
+++ b/src/features/ProductImagesLayout/ImagesCarousel/ImagesCarousel.scss
@@ -12,7 +12,7 @@
 .images-carousel__container {
   width: 100vw;
   height: 300px;
-  overflow-x: hidden;
+  overflow: hidden;
   position: relative;
   max-height: 300px;
 }
